crates/pandalang/src/snapshots/pandalang__parser__tests__parses@add.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/app/add.panda
---
App(
    App {
        fun: App(
            App {
                fun: Fun(
                    Fun {
                        arg: "x",
                        body: Fun(
                            Fun {
                                arg: "y",
                                body: BinOp(
                                    BinOp {
                                        left: Var(
                                            Var {
                                                name: "x",
                                            },
                                        ),
                                        right: Var(
                                            Var {
                                                name: "y",
                                            },
                                        ),
                                        kind: Add,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                arg: Int(
                    Int {
                        n: 2,
                    },
                ),
            },
        ),
        arg: Int(
            Int {
                n: 3,
            },
        ),
    },
)
