crates/pandalang/src/snapshots/pandalang__parser__tests__parses@add_assoc.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/bin_op/add_assoc.panda
---
BinOp(
    BinOp {
        left: BinOp(
            BinOp {
                left: Var(
                    Var {
                        name: "a",
                    },
                ),
                right: Var(
                    Var {
                        name: "b",
                    },
                ),
                kind: Add,
            },
        ),
        right: Var(
            Var {
                name: "c",
            },
        ),
        kind: Add,
    },
)
