crates/pandalang/src/snapshots/pandalang__parser__tests__parses@id.panda-2.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/fun/id.panda
---
Fun(
    Fun {
        arg: "x",
        body: Var(
            Var {
                name: "x",
            },
        ),
    },
)
