crates/pandalang/src/snapshots/pandalang__parser__tests__parses@int.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/int/int.panda
---
Int(
    Int {
        n: 0,
    },
)
