crates/pandalang/src/snapshots/pandalang__parser__tests__parses@mul_int.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/bin_op/mul_int.panda
---
BinOp(
    BinOp {
        left: Int(
            Int {
                n: 1,
            },
        ),
        right: Int(
            Int {
                n: 1,
            },
        ),
        kind: Mul,
    },
)
