crates/pandalang/src/snapshots/pandalang__parser__tests__parses@multi_letter.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/var/multi_letter.panda
---
Var(
    Var {
        name: "foo",
    },
)
