crates/pandalang/src/snapshots/pandalang__parser__tests__parses@nested.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/fun/nested.panda
---
Fun(
    Fun {
        arg: "x",
        body: Fun(
            Fun {
                arg: "y",
                body: BinOp(
                    BinOp {
                        left: Var(
                            Var {
                                name: "x",
                            },
                        ),
                        right: Var(
                            Var {
                                name: "y",
                            },
                        ),
                        kind: Add,
                    },
                ),
            },
        ),
    },
)
