crates/pandalang/src/snapshots/pandalang__parser__tests__parses@prec2.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/bin_op/prec2.panda
---
BinOp(
    BinOp {
        left: BinOp(
            BinOp {
                left: Var(
                    Var {
                        name: "a",
                    },
                ),
                right: Var(
                    Var {
                        name: "b",
                    },
                ),
                kind: Sub,
            },
        ),
        right: Var(
            Var {
                name: "c",
            },
        ),
        kind: Add,
    },
)
