crates/pandalang/src/snapshots/pandalang__parser__tests__parses_exprs@unit.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/unit.panda
---
Ok(
    Unit,
)
